# AI-Blogger

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: pipeline.py
backend/app/core/interfaces/: blog_publisher.py  llm_provider.py  trend_source.py
backend/app/core/models/: content.py  pipeline.py
backend/app/db/: models.py  session.py
backend/app/db/repositories/: blog_repo.py  content_repo.py  pipeline_repo.py
backend/app/pipeline/: orchestrator.py
backend/app/pipeline/prompts/: content_generation.py  keyword_expansion.py
backend/app/pipeline/stages/: base_stage.py  blog_publisher_stage.py  content_generator.py  keyword_researcher.py  seo_validator.py  trend_researcher.py
backend/app/providers/llm/: gemini_provider.py  llm_router.py
backend/app/providers/publishers/: blogger_publisher.py
backend/app/providers/trend_sources/: google_trends_source.py  rss_source.py
backend/app/utils/: cost_tracker.py  logging.py  retry.py
docs/: api_reference.md  setup_guide.md
docs/adr/: 001-python-langchain.md  002-postgresql-over-mongodb.md  003-blogger-api-approach.md
scripts/: authorize_google.py  seed_db.py
